# cella

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  rust-toolchain.toml
crates/cella-agent/: Cargo.toml  README.md
crates/cella-agent/docs/: agent-architecture.md
crates/cella-agent/src/: browser.rs  claude_config_sync.rs  cli.rs  clipboard.rs  control.rs  credential.rs  credential_mux.rs  credential_tunnel.rs  error.rs  forward_proxy.rs  integration_tests.rs  lib.rs  main.rs  mitm.rs  plugin_sync.rs  port_proxy.rs  port_watcher.rs  proxy_config.rs  reconnecting_client.rs  ssh_agent_bridge.rs  state.rs  tunnel.rs
crates/cella-backend/: Cargo.toml  README.md
crates/cella-backend/src/: agent.rs  container_setup.rs  error.rs  lib.rs  lifecycle.rs  mount.rs  names.rs  network.rs  progress.rs  resolve.rs  secret_mask.rs  traits.rs  types.rs  uid_image.rs
crates/cella-cli/: Cargo.toml  README.md  build.rs
crates/cella-cli/src/: backend.rs  main.rs  picker.rs  progress.rs  style.rs  table.rs  title.rs  tunnel_binaries.rs
crates/cella-cli/src/commands/: branch.rs  build.rs  build_cmd.rs  code.rs  completion.rs  completions.rs  compose_features.rs  compose_up.rs  config.rs  credential.rs  credential_proxy.rs  daemon.rs  doctor.rs  down.rs  env_cache.rs  exec.rs  features_configuration.rs  image.rs  init.rs  install.rs  list.rs  logs.rs  mod.rs  network.rs  nvim.rs  outdated.rs  ports.rs  prune.rs  read_configuration.rs  run_user_commands.rs  set_up.rs  shell.rs  shell_detect.rs  spawn.rs  status.rs  switch.rs  template.rs  templates.rs  tmux.rs  (+3 more)
crates/cella-codegen/: CLAUDE.md  Cargo.toml  README.md
crates/cella-codegen/src/: error.rs  lib.rs
crates/cella-compose/: Cargo.toml  README.md
crates/cella-compose/src/: build_features.rs  cli.rs  combined_dockerfile_build.rs  config.rs  discovery.rs  dockerfile.rs  error.rs  hash.rs  lib.rs  mount_parity.rs  orchestrate.rs  override_file.rs  parse.rs  project.rs
crates/cella-config/: CLAUDE.md  Cargo.toml  README.md  build.rs
crates/cella-config/schemas/: devContainer.base.schema.json
crates/cella-config/src/: diagnostic.rs  discover.rs  error.rs  jsonc.rs  lib.rs  merge.rs  parse.rs  resolve.rs  span.rs  subst.rs
crates/cella-container/: Cargo.toml  README.md
crates/cella-container/src/: backend.rs  discovery.rs  integration_tests.rs  lib.rs  test_support.rs
crates/cella-credential-proxy/: Cargo.toml  README.md
crates/cella-credential-proxy/src/: client.rs  daemon.rs  error.rs  host.rs  lib.rs  protocol.rs  server.rs
crates/cella-daemon/: Cargo.toml  README.md
crates/cella-daemon-client/: Cargo.toml  README.md
crates/cella-daemon-client/src/: lib.rs  ssh_proxy.rs
crates/cella-daemon-client/tests/: client.rs
crates/cella-daemon/docs/: daemon-architecture.md
crates/cella-daemon/src/: audit.rs  browser.rs  claude_config_sync.rs  client.rs  clipboard.rs  control_server.rs  credential.rs  credential_cache.rs  credential_mux.rs  credential_proxy.rs  credential_resolver.rs  daemon.rs  error.rs  health.rs  lib.rs  logging.rs  management.rs  orbstack.rs  phantom_registry.rs  port_manager.rs  proxy.rs  shared.rs  ssh_proxy.rs  stream_bridge.rs  task_manager.rs  tunnel.rs
crates/cella-docker/: Cargo.toml  README.md
crates/cella-docker/src/: client.rs  config_map.rs  container.rs  discovery.rs  docker_api_impl.rs  error.rs  exec.rs  image.rs  lib.rs  lifecycle.rs  names.rs  network.rs  resolve.rs  uid.rs  upload.rs  volume.rs
crates/cella-doctor/: Cargo.toml  README.md
crates/cella-doctor/src/: host_requirements.rs  lib.rs  redact.rs
crates/cella-env/: Cargo.toml  README.md
crates/cella-env/src/: ai_keys.rs  ca_bundle.rs  claude_code.rs  codex.rs  credential_providers.rs  error.rs  gemini.rs  gh_credential.rs  git_config.rs  git_credential.rs  git_ignore.rs  lib.rs  nvim.rs  paths.rs  platform.rs  proxy.rs  ssh_agent.rs  ssh_config.rs  tmux.rs  user_env_probe.rs
crates/cella-env/tests/: ssh_agent_retry.rs
crates/cella-features/: Cargo.toml  README.md
crates/cella-features/src/: auth.rs  cache.rs  dockerfile.rs  docs.rs  error.rs  fetch.rs  graph.rs  lib.rs  lockfile.rs  merge.rs  metadata.rs  oci.rs  ordering.rs  package.rs  publish.rs  reference.rs  test_utils.rs  types.rs
crates/cella-filesync/: Cargo.toml
crates/cella-filesync/src/: lib.rs
crates/cella-git/: Cargo.toml  README.md
crates/cella-git/src/: branch.rs  cmd.rs  content_hash.rs  error.rs  lib.rs  lock.rs  repo.rs  sanitize.rs  test_utils.rs  worktree.rs
crates/cella-network/: CLAUDE.md  Cargo.toml  README.md
crates/cella-network/src/: ca.rs  config.rs  lib.rs  merge.rs  proxy_env.rs  rules.rs
crates/cella-oci/: Cargo.toml  README.md
crates/cella-oci/src/: auth.rs  cache.rs  extract.rs  inspect.rs  lib.rs  limits.rs  push.rs
crates/cella-orchestrator/: Cargo.toml  README.md
crates/cella-orchestrator/src/: approved_providers.rs  branch.rs  compose_build.rs  compose_features.rs  compose_mounts.rs  compose_up.rs  config.rs  container_setup.rs  credential_protect.rs  daemon_registration.rs  docker_helpers.rs  dotfiles.rs  env_cache.rs  error.rs  forward_ports.rs  host_requirements.rs  image.rs  lib.rs  lifecycle.rs  progress.rs  prune.rs  result.rs  run_user_commands.rs  shell_detect.rs  ssh_proxy_client.rs  tool_install.rs  uid_image.rs  up.rs
crates/cella-port/: Cargo.toml  README.md
crates/cella-port/docs/: port-forwarding.md
crates/cella-port/src/: allocation.rs  detection.rs  error.rs  lib.rs  protocol.rs
crates/cella-proxy/: Cargo.toml  README.md
crates/cella-proxy/src/: error_page.rs  hostname.rs  lib.rs  router.rs  server.rs
crates/cella-templates/: Cargo.toml  README.md
crates/cella-templates/src/: apply.rs  cache.rs  collection.rs  docs.rs  error.rs  fetcher.rs  index.rs  lib.rs  metadata.rs  oci_ref.rs  options.rs  publish.rs  tags.rs  types.rs
crates/cella-testing/: Cargo.toml  README.md
crates/cella-testing/src/: detect.rs  lib.rs
crates/cella-testing/tests/: live_tests.rs
crates/cella-tool-install/: Cargo.toml  README.md
crates/cella-tool-install/src/: lib.rs  pkg.rs
(+306 files in other folders)
