[workspace]
resolver = "2"
members = [
    "crates/cella-cli",
    "crates/cella-codegen",
    "crates/cella-config",
    "crates/cella-credential-proxy",
    "crates/cella-daemon",
    "crates/cella-docker",
    "crates/cella-env",
    "crates/cella-git",
    "crates/cella-port",
    "crates/cella-agent",
    "crates/cella-features",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/eve0415/cella"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50.0", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.7"

# Encoding
base64 = "0.22.1"

# Error handling
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# CLI
clap = { version = "4.6.0", features = ["derive"] }

# Diagnostics
miette = { version = "7.6.0", features = ["fancy"] }

# Docker client
bollard = "0.20.2"

# Hashing
sha2 = "0.10.9"
hex = "0.4.3"

# Stream processing
futures-util = "0.3.32"

# Terminal
crossterm = { version = "0.29.0", default-features = false }

# Timestamps
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }

# Tar archives
tar = "0.4.45"

# Pattern matching
regex = "1.11.1"
glob = "0.3.2"

# Testing
tempfile = "3.27.0"

# Internal crates
cella-agent = { path = "crates/cella-agent" }
cella-codegen = { path = "crates/cella-codegen" }
cella-config = { path = "crates/cella-config" }
cella-credential-proxy = { path = "crates/cella-credential-proxy" }
cella-daemon = { path = "crates/cella-daemon" }
cella-docker = { path = "crates/cella-docker" }
cella-env = { path = "crates/cella-env" }
cella-features = { path = "crates/cella-features" }
cella-git = { path = "crates/cella-git" }
cella-port = { path = "crates/cella-port" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow common patterns that pedantic flags unnecessarily
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Stubs are async by design — they'll gain real awaits during implementation
unused_async = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
