[workspace]
resolver = "2"
members = [
    "crates/cella-backend",
    "crates/cella-cli",
    "crates/cella-codegen",
    "crates/cella-compose",
    "crates/cella-config",
    "crates/cella-credential-proxy",
    "crates/cella-daemon",
    "crates/cella-doctor",
    "crates/cella-docker",
    "crates/cella-env",
    "crates/cella-git",
    "crates/cella-port",
    "crates/cella-agent",
    "crates/cella-features",
]

[workspace.package]
version = "0.0.8"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/eve0415/cella"
homepage = "https://github.com/eve0415/cella"
description = "A terminal-native devcontainer CLI built for the AI agent era"
readme = "README.md"
keywords = ["devcontainers", "containers", "cli", "docker", "vscode"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.94.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50.0", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
yaml_serde = "0.10.4"
toml = "1.1.0"

# Encoding
base64 = "0.22.1"

# Error handling
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# CLI
clap = { version = "4.6.0", features = ["derive"] }

# Diagnostics
miette = { version = "7.6.0", features = ["fancy"] }

# Docker client
bollard = "0.20.2"

# Hashing
sha2 = "0.10.9"
hex = "0.4.3"

# Stream processing
futures-util = "0.3.32"

# Terminal
crossterm = { version = "0.29.0", default-features = false }
terminal_size = "0.4.4"

# Progress display
indicatif = "0.18.4"

# Timestamps
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }

# Tar archives
tar = "0.4.45"

# HTTP client
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls",
] }

# Pattern matching
regex = "1.12.3"
glob = "0.3.3"

# File watching
notify = "8.0.0"

# Process inspection
nix = { version = "0.31.2", default-features = false, features = ["signal"] }

# Testing
tempfile = "3.27.0"
insta = { version = "1.46.3", features = ["json", "yaml", "redactions"] }

# Internal crates
cella-backend = { path = "crates/cella-backend" }
cella-agent = { path = "crates/cella-agent" }
cella-codegen = { path = "crates/cella-codegen" }
cella-compose = { path = "crates/cella-compose" }
cella-doctor = { path = "crates/cella-doctor" }
cella-config = { path = "crates/cella-config" }
cella-credential-proxy = { path = "crates/cella-credential-proxy" }
cella-daemon = { path = "crates/cella-daemon" }
cella-docker = { path = "crates/cella-docker" }
cella-env = { path = "crates/cella-env" }
cella-features = { path = "crates/cella-features" }
cella-git = { path = "crates/cella-git" }
cella-port = { path = "crates/cella-port" }

[profile.release]
strip = true
lto = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow common patterns that pedantic flags unnecessarily
must_use_candidate = "allow"
# Domain naming (container_id/container_name/container_ip) is more readable than forced disambiguation
similar_names = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
unused_qualifications = "deny"
