[workspace]
resolver = "2"
members = [
    "crates/cella-backend",
    "crates/cella-cli",
    "crates/cella-codegen",
    "crates/cella-compose",
    "crates/cella-config",
    "crates/cella-container",
    "crates/cella-daemon",
    "crates/cella-daemon-client",
    "crates/cella-doctor",
    "crates/cella-docker",
    "crates/cella-env",
    "crates/cella-git",
    "crates/cella-port",
    "crates/cella-agent",
    "crates/cella-features",
    "crates/cella-network",
    "crates/cella-oci",
    "crates/cella-orchestrator",
    "crates/cella-tool-install",
    "crates/cella-protocol",
    "crates/cella-jsonc",
    "crates/cella-templates",
]

[workspace.package]
version = "0.0.40"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/eve0415/cella"
homepage = "https://github.com/eve0415/cella"
description = "A terminal-native devcontainer CLI built for the AI agent era"
readme = "README.md"
keywords = ["devcontainers", "containers", "cli", "docker", "vscode"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.95.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "=1.52.1", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }

# Serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
yaml_serde = "=0.10.4"
toml = "=1.1.2"

# Encoding
base64 = "=0.22.1"

# Error handling
thiserror = "=2.0.18"

# Logging
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

# CLI
clap = { version = "=4.6.1", features = ["derive"] }
clap_complete = "=4.6.3"

# Interactive prompts
inquire = "=0.9.4"

# Diagnostics
miette = { version = "=7.6.0", features = ["fancy"] }

# Docker client
bollard = "=0.20.2"

# Hashing
sha2 = "=0.11.0"
hex = "=0.4.3"

# Stream processing
futures-util = "=0.3.32"

# Terminal
crossterm = { version = "=0.29.0", default-features = false }
owo-colors = "=4.3.0"
terminal_size = "=0.4.4"

# Progress display
indicatif = "=0.18.4"

# Timestamps
chrono = { version = "=0.4.44", default-features = false, features = ["clock"] }

# Tar archives
tar = "=0.4.45"

# HTTP client
reqwest = { version = "=0.13.3", default-features = false, features = [
    "rustls",
] }

# Filesystem
dirs = "=6.0.0"

# Compression
flate2 = "=1.1.9"

# OCI registry
oci-distribution = { version = "=0.11.0", default-features = false, features = ["rustls-tls"] }

# Pattern matching
regex = "=1.12.3"
glob = "=0.3.3"

# JSONC editing
jsonc-parser = { version = "=0.32.3", features = ["cst"] }

# Certificate management
rcgen = "=0.14.7"
rustls = { version = "=0.23.39", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "=0.8.3"
rustls-pemfile = "=2.2.0"
tokio-rustls = "=0.26.4"

# HTTP proxy (MITM relay)
hyper = { version = "=1.9.0", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "=0.1.20", features = ["tokio", "server-auto", "http1", "http2"] }
http-body-util = "=0.1.3"

# File watching
notify = "=8.2.0"

# Process inspection
nix = { version = "=0.31.2", default-features = false, features = ["signal", "term", "user"] }

# PTY
portable-pty = "=0.9.0"

# Testing
tempfile = "=3.27.0"
filetime = "=0.2.27"
insta = { version = "=1.47.2", features = ["json", "yaml", "redactions"] }

# Internal crates
cella-backend = { path = "crates/cella-backend" }
cella-agent = { path = "crates/cella-agent" }
cella-codegen = { path = "crates/cella-codegen" }
cella-compose = { path = "crates/cella-compose" }
cella-doctor = { path = "crates/cella-doctor" }
cella-config = { path = "crates/cella-config" }
cella-jsonc = { path = "crates/cella-jsonc" }
cella-container = { path = "crates/cella-container" }
cella-daemon = { path = "crates/cella-daemon" }
cella-daemon-client = { path = "crates/cella-daemon-client" }
cella-docker = { path = "crates/cella-docker" }
cella-env = { path = "crates/cella-env" }
cella-features = { path = "crates/cella-features" }
cella-git = { path = "crates/cella-git" }
cella-network = { path = "crates/cella-network" }
cella-oci = { path = "crates/cella-oci" }
cella-orchestrator = { path = "crates/cella-orchestrator" }
cella-tool-install = { path = "crates/cella-tool-install" }
cella-port = { path = "crates/cella-port" }
cella-protocol = { path = "crates/cella-protocol" }
cella-templates = { path = "crates/cella-templates" }

[profile.release]
strip = true
lto = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow common patterns that pedantic flags unnecessarily
must_use_candidate = "allow"
# Domain naming (container_id/container_name/container_ip) is more readable than forced disambiguation
similar_names = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
unused_qualifications = "deny"
