[package]
name = "cella-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cella-agent"
path = "src/main.rs"

[dependencies]
cella-port.workspace = true
notify.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
