[package]
name = "cella-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cella-agent"
path = "src/main.rs"

[dependencies]
cella-network.workspace = true
cella-port.workspace = true
nix.workspace = true
notify.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
