[package]
name = "cella-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cella-agent"
path = "src/main.rs"

[dependencies]
base64.workspace = true
cella-network.workspace = true
cella-port.workspace = true
miette.workspace = true
cella-protocol.workspace = true
nix.workspace = true
notify.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
integration-tests = []

[lints]
workspace = true
