[package]
name = "cella-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
sha2.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
