[package]
name = "cella-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cella-env.workspace = true
cella-features.workspace = true
cella-git.workspace = true
chrono.workspace = true
tokio.workspace = true
futures-util.workspace = true
hex.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
