[package]
name = "cella-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cella"
path = "src/main.rs"

[dependencies]
cella-config.workspace = true
cella-credential-proxy.workspace = true
cella-daemon.workspace = true
cella-doctor.workspace = true
cella-docker.workspace = true
cella-env.workspace = true
cella-features.workspace = true
cella-git.workspace = true
cella-port.workspace = true
cella-agent.workspace = true
chrono.workspace = true
clap.workspace = true
hex.workspace = true
miette.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
