[package]
name = "cella-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cella"
path = "src/main.rs"

[dependencies]
cella-backend.workspace = true
cella-compose.workspace = true
cella-config.workspace = true
cella-daemon.workspace = true
cella-doctor.workspace = true
cella-docker.workspace = true
cella-orchestrator.workspace = true
cella-env.workspace = true
cella-features.workspace = true
cella-templates.workspace = true
cella-network.workspace = true
cella-git.workspace = true
cella-port.workspace = true
cella-protocol.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
inquire.workspace = true
miette.workspace = true
owo-colors.workspace = true
serde_json.workspace = true
terminal_size.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true
jsonc-parser.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
cella-container.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
