[package]
name = "cella-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
thiserror.workspace = true
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2.37"
heck = "0.5"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
insta = "1"

[lints]
workspace = true
