[package]
name = "cella-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miette.workspace = true
serde_json.workspace = true
thiserror.workspace = true
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
prettyplease = "0.2.37"
heck = "0.5.0"
indexmap = { version = "2.13.0", features = ["serde"] }

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
