[package]
name = "cella-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miette.workspace = true
serde_json.workspace = true
thiserror.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
prettyplease = "=0.2.37"
heck = "=0.5.0"
indexmap = { version = "=2.14.0", features = ["serde"] }

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
