[package]
name = "cella-compose"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bollard.workspace = true
cella-docker.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml"] }
tempfile.workspace = true

[lints]
workspace = true
