[package]
name = "cella-compose"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[features]
integration-tests = []

[lints]
workspace = true
