[package]
name = "cella-compose"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cella-backend.workspace = true
cella-config.workspace = true
cella-daemon-client.workspace = true
cella-env.workspace = true
cella-features.workspace = true
cella-git.workspace = true
cella-network.workspace = true
cella-protocol.workspace = true
cella-tool-install.workspace = true
hex.workspace = true
miette.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[features]
integration-tests = []

[lints]
workspace = true
