[package]
name = "cella-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cella-backend.workspace = true
cella-env.workspace = true
cella-features.workspace = true
cella-jsonc.workspace = true
cella-network.workspace = true
cella-protocol.workspace = true
hex.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[build-dependencies]
cella-codegen = { path = "../cella-codegen" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
