[package]
name = "cella-container"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cella-backend.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
