[package]
name = "cella-container"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cella-backend.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
integration-tests = []

[lints]
workspace = true
