[package]
name = "cella-credential-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cella-daemon.workspace = true
nix.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
