[package]
name = "cella-daemon-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cella-protocol.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
