[package]
name = "cella-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cella-port.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
