[package]
name = "cella-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cella-port.workspace = true
nix.workspace = true
portable-pty.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
integration-tests = []

[lints]
workspace = true
