[package]
name = "cella-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
cella-port.workspace = true
cella-protocol.workspace = true
hex.workspace = true
miette.workspace = true
nix.workspace = true
portable-pty.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
cella-daemon-client.workspace = true
tempfile.workspace = true

[features]
integration-tests = []

[lints]
workspace = true
