[package]
name = "cella-docker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bollard.workspace = true
cella-config.workspace = true
chrono.workspace = true
futures-util.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
