[package]
name = "cella-docker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bollard.workspace = true
cella-port.workspace = true
crossterm.workspace = true
cella-features.workspace = true
tar.workspace = true
chrono.workspace = true
futures-util.workspace = true
hex.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
