[package]
name = "cella-docker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bollard.workspace = true
reqwest.workspace = true
cella-backend.workspace = true
crossterm.workspace = true
glob.workspace = true
miette.workspace = true
tar.workspace = true
chrono.workspace = true
futures-util.workspace = true
hex.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
