[package]
name = "cella-doctor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cella-backend.workspace = true
cella-config.workspace = true
cella-daemon.workspace = true
cella-daemon-client.workspace = true
cella-docker.workspace = true
cella-env.workspace = true
cella-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
