[package]
name = "cella-env"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cella-network.workspace = true
miette.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
integration-tests = []

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
