[package]
name = "cella-env"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
cli = ["dep:clap"]

[dependencies]
cella-network.workspace = true
clap = { workspace = true, optional = true }
miette.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
