[package]
name = "cella-features"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
bollard.workspace = true
dirs = "6.0.0"
futures-util.workspace = true
flate2 = "1.1.9"
hex.workspace = true
miette.workspace = true
oci-distribution = { version = "0.11.0", default-features = false, features = ["rustls-tls"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[lints]
workspace = true
