[package]
name = "cella-features"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cella-oci.workspace = true
dirs.workspace = true
futures-util.workspace = true
flate2.workspace = true
hex.workspace = true
miette.workspace = true
oci-distribution.workspace = true
reqwest.workspace = true
serde.workspace = true
semver.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
cella-testing.workspace = true
insta.workspace = true
tempfile.workspace = true

[lints]
workspace = true
