[package]
name = "cella-filesync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
notify.workspace = true
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
