[package]
name = "cella-git"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fs4.workspace = true
miette.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true

[lints]
workspace = true
