[package]
name = "cella-network"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
rcgen.workspace = true
rustls-native-certs.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true

[lints]
workspace = true
