[package]
name = "cella-oci"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
dirs.workspace = true
flate2.workspace = true
oci-distribution.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
