[package]
name = "cella-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cella-backend.workspace = true
cella-compose.workspace = true
cella-config.workspace = true
cella-env.workspace = true
cella-features.workspace = true
cella-protocol.workspace = true
cella-git.workspace = true
cella-network.workspace = true
hex.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
