[package]
name = "cella-port"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cella-protocol.workspace = true
miette.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
