[package]
name = "cella-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hostname-based HTTP reverse proxy for cella dev containers"

[dependencies]
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
futures-util.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
