[package]
name = "cella-templates"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs = "6.0.0"
flate2 = "1.1.9"
glob.workspace = true
hex.workspace = true
miette.workspace = true
oci-distribution = { version = "0.11.0", default-features = false, features = ["rustls-tls"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Reuse Docker credential resolution from cella-features
cella-features.workspace = true

[dev-dependencies]
filetime.workspace = true
insta.workspace = true
tempfile.workspace = true

[features]
integration-tests = []

[lints]
workspace = true
