[package]
name = "cella-templates"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
flate2.workspace = true
glob.workspace = true
hex.workspace = true
miette.workspace = true
oci-distribution.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Reuse Docker credential resolution from cella-features
cella-features.workspace = true

[dev-dependencies]
filetime.workspace = true
insta.workspace = true
tempfile.workspace = true

[features]
integration-tests = []

[lints]
workspace = true
