[package]
name = "cella-templates"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cella-jsonc.workspace = true
dirs.workspace = true
flate2.workspace = true
futures-util.workspace = true
glob.workspace = true
hex.workspace = true
miette.workspace = true
oci-distribution.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

cella-oci.workspace = true

[dev-dependencies]
cella-testing.workspace = true
filetime.workspace = true
tempfile.workspace = true

[lints]
workspace = true
